# FundamentalsOfMachineLearning-ChessEval

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
data/: chessData_small.csv
notebooks/: model_evaluation.ipynb
src/: data_utils.py  game.py  models.py  test_encoder.py  train.py
